<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.ossf.www.bletagregister.Xbee.XBeePacketDetailsActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp">

        <TextView
            android:id="@+id/received_xbee_packet_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:text="@string/selected_xbee_packet_title"
            android:textColor="@color/dark_gray"
            android:textSize="20sp" />

        <Button
            android:id="@+id/compare_button"
            android:text="Compare"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/received_xbee_packet_title" />

        <View
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignTop="@+id/date_label"
            android:layout_below="@id/compare_button"
            android:background="@color/light_gray" />

        <TextView
            android:id="@id/date_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/compare_button"
            android:layout_marginStart="5dp"
            android:paddingTop="3dp"
            android:text="@string/received_date_short"
            android:textColor="@color/dark_gray"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/date_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_below="@id/compare_button"
            android:layout_marginEnd="5dp"
            android:layout_marginTop="3dp"
            android:textColor="@color/Black"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/packet_type_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/date_label"
            android:layout_marginStart="5dp"
            android:layout_marginTop="3dp"
            android:text="@string/type_short"
            android:textColor="@color/dark_gray"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/packet_type_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_below="@id/date_label"
            android:layout_marginEnd="5dp"
            android:layout_marginTop="3dp"
            android:textColor="@color/Black"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/source_address_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/packet_type_label"
            android:layout_marginStart="5dp"
            android:layout_marginTop="3dp"
            android:text="@string/source_address_short"
            android:textColor="@color/dark_gray"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/source_address_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_below="@id/packet_type_label"
            android:layout_marginEnd="5dp"
            android:layout_marginTop="3dp"
            android:textColor="@color/Black"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/packet_data_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/source_address_label"
            android:layout_marginStart="5dp"
            android:layout_marginTop="3dp"
            android:text="@string/packet_data"
            android:textColor="@color/dark_gray"
            android:textSize="16sp" />

        <View
            android:id="@+id/horizontal_separator"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_below="@id/packet_data_label"
            android:layout_marginEnd="5dp"
            android:layout_marginStart="5dp"
            android:layout_marginTop="3dp"
            android:background="@color/dark_gray" />

        <TextView
            android:id="@+id/packet_data_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_below="@id/horizontal_separator"
            android:layout_marginEnd="5dp"
            android:layout_marginStart="5dp"
            android:layout_marginTop="3dp"
            android:textColor="@color/Black"
            android:textSize="16sp" />
    </RelativeLayout>

</android.support.constraint.ConstraintLayout>
