<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="3dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        android:orientation="horizontal">

        <RelativeLayout
            android:layout_width="0px"
            android:layout_height="wrap_content"
            android:layout_weight="70">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:text="@string/mac_address"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/dark_gray"
                    android:textSize="15sp"/>

                <TextView
                    android:id="@+id/xbee_mac_address_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/dark_gray"
                    android:textSize="15sp"/>
            </LinearLayout>
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="0px"
            android:layout_height="wrap_content"
            android:layout_weight="30">

            <Button
                android:id="@+id/clear_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:background="@drawable/button_red"
                android:paddingLeft="7dp"
                android:paddingRight="7dp"
                android:text="@string/clear"
                android:textColor="@color/white" />
        </RelativeLayout>
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/received_packets_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:padding="0px"
                android:textColor="@color/dark_gray"
                android:textSize="10sp"
                android:textStyle="italic"
                tools:ignore="SmallSp" />

            <RelativeLayout
                android:id="@+id/packet_list_header"
                android:layout_width="match_parent"
                android:layout_height="17dp"
                android:layout_alignParentEnd="true"
                android:layout_alignParentStart="true"
                android:layout_below="@id/received_packets_text"
                android:layout_marginTop="3dp"
                android:background="@color/very_dark_gray">
                <!-- Date -->
                <TextView
                    android:id="@+id/date_header"
                    android:layout_width="69dp"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_marginStart="3dp"
                    android:text="@string/header_date"
                    android:textColor="@color/light_gray"
                    android:textSize="11sp"
                    tools:ignore="SmallSp" />
                <!-- Separator -->
                <View
                    android:id="@+id/separator_1"
                    android:layout_width="1dp"
                    android:layout_height="match_parent"
                    android:layout_toEndOf="@id/date_header"
                    android:background="@color/light_gray" />
                <!-- Packet type -->
                <TextView
                    android:id="@+id/header_packet_type"
                    android:layout_width="70dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="3dp"
                    android:layout_toEndOf="@id/separator_1"
                    android:text="@string/header_type"
                    android:textColor="@color/light_gray"
                    android:textSize="11sp"
                    tools:ignore="SmallSp" />
                <!-- Separator -->
                <View
                    android:id="@+id/separator_2"
                    android:layout_width="1dp"
                    android:layout_height="match_parent"
                    android:layout_toEndOf="@id/header_packet_type"
                    android:background="@color/light_gray" />
                <!-- Source address -->
                <TextView
                    android:id="@+id/header_source_address"
                    android:layout_width="105dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="3dp"
                    android:layout_toEndOf="@id/separator_2"
                    android:text="@string/header_source_address"
                    android:textColor="@color/light_gray"
                    android:textSize="11sp"
                    tools:ignore="SmallSp" />
                <!-- Separator -->
                <View
                    android:id="@+id/separator_3"
                    android:layout_width="1dp"
                    android:layout_height="match_parent"
                    android:layout_toEndOf="@id/header_source_address"
                    android:background="@color/light_gray" />
                <!-- PAcket data -->
                <TextView
                    android:id="@+id/header_packet_data"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="3dp"
                    android:layout_toEndOf="@id/separator_3"
                    android:ellipsize="end"
                    android:text="@string/header_packet_data"
                    android:textColor="@color/light_gray"
                    android:textSize="11sp"
                    tools:ignore="SmallSp" />
            </RelativeLayout>

            <ListView
                android:id="@+id/received_packets_list"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentStart="true"
                android:layout_below="@id/packet_list_header"
                android:background="@color/light_gray"
                android:choiceMode="singleChoice"
                android:overScrollMode="never"
                android:textSize="20sp"/>
        </RelativeLayout>
    </LinearLayout>
</LinearLayout>
